// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package sqlc

import (
	"time"

	"github.com/jackc/pgx/v5/pgtype"
)

type Account struct {
	ID              string     `json:"id"`
	Email           string     `json:"email"`
	PasswordHash    string     `json:"password_hash"`
	Status          string     `json:"status"`
	Timezone        string     `json:"timezone"`
	EmailVerifiedAt *time.Time `json:"email_verified_at"`
	CreatedAt       time.Time  `json:"created_at"`
	UpdatedAt       time.Time  `json:"updated_at"`
	DeletedAt       *time.Time `json:"deleted_at"`
}

type AuthSession struct {
	ID                string     `json:"id"`
	AccountID         string     `json:"account_id"`
	RefreshSecretHash string     `json:"refresh_secret_hash"`
	FamilyID          string     `json:"family_id"`
	UserAgentHash     *string    `json:"user_agent_hash"`
	IpHash            *string    `json:"ip_hash"`
	ExpiresAt         time.Time  `json:"expires_at"`
	RevokedAt         *time.Time `json:"revoked_at"`
	ReplacedBy        *string    `json:"replaced_by"`
	CreatedAt         time.Time  `json:"created_at"`
	UpdatedAt         time.Time  `json:"updated_at"`
}

type KitchenRecommendation struct {
	ID                  string     `json:"id"`
	UserProfileID       string     `json:"user_profile_id"`
	ContextReference    []byte     `json:"context_reference"`
	Rationale           string     `json:"rationale"`
	ConfidenceStatement *string    `json:"confidence_statement"`
	Status              string     `json:"status"`
	CreatedAt           time.Time  `json:"created_at"`
	UpdatedAt           time.Time  `json:"updated_at"`
	DeletedAt           *time.Time `json:"deleted_at"`
}

type MealPlan struct {
	ID            string     `json:"id"`
	UserProfileID string     `json:"user_profile_id"`
	PeriodStart   string     `json:"period_start"`
	PeriodEnd     string     `json:"period_end"`
	Status        string     `json:"status"`
	CreatedAt     time.Time  `json:"created_at"`
	UpdatedAt     time.Time  `json:"updated_at"`
	DeletedAt     *time.Time `json:"deleted_at"`
}

type Pantry struct {
	ID            string     `json:"id"`
	UserProfileID string     `json:"user_profile_id"`
	Status        string     `json:"status"`
	CreatedAt     time.Time  `json:"created_at"`
	UpdatedAt     time.Time  `json:"updated_at"`
	DeletedAt     *time.Time `json:"deleted_at"`
}

type PantryItem struct {
	ID             string         `json:"id"`
	PantryID       string         `json:"pantry_id"`
	IngredientName string         `json:"ingredient_name"`
	Category       string         `json:"category"`
	Quantity       pgtype.Numeric `json:"quantity"`
	Unit           string         `json:"unit"`
	ExpiryDate     *string        `json:"expiry_date"`
	Status         string         `json:"status"`
	CreatedAt      time.Time      `json:"created_at"`
	UpdatedAt      time.Time      `json:"updated_at"`
	DeletedAt      *time.Time     `json:"deleted_at"`
}

type PlannedMeal struct {
	ID                     string     `json:"id"`
	MealPlanID             string     `json:"meal_plan_id"`
	MealDate               string     `json:"meal_date"`
	MealOccasion           string     `json:"meal_occasion"`
	RecipeID               *string    `json:"recipe_id"`
	RecommendationOptionID *string    `json:"recommendation_option_id"`
	Status                 string     `json:"status"`
	CreatedAt              time.Time  `json:"created_at"`
	UpdatedAt              time.Time  `json:"updated_at"`
	DeletedAt              *time.Time `json:"deleted_at"`
}

type PreferenceSet struct {
	ID            string    `json:"id"`
	UserProfileID string    `json:"user_profile_id"`
	Status        string    `json:"status"`
	Preferences   []byte    `json:"preferences"`
	ValidFrom     string    `json:"valid_from"`
	CreatedAt     time.Time `json:"created_at"`
	UpdatedAt     time.Time `json:"updated_at"`
}

type Recipe struct {
	ID              string      `json:"id"`
	Title           string      `json:"title"`
	Summary         string      `json:"summary"`
	Servings        int32       `json:"servings"`
	PrepTimeMinutes pgtype.Int4 `json:"prep_time_minutes"`
	CookTimeMinutes pgtype.Int4 `json:"cook_time_minutes"`
	Ingredients     []byte      `json:"ingredients"`
	Instructions    []byte      `json:"instructions"`
	IsPublic        bool        `json:"is_public"`
	Status          string      `json:"status"`
	CreatedAt       time.Time   `json:"created_at"`
	UpdatedAt       time.Time   `json:"updated_at"`
	DeletedAt       *time.Time  `json:"deleted_at"`
}

type RecipeFavorite struct {
	ID            string     `json:"id"`
	RecipeID      string     `json:"recipe_id"`
	UserProfileID string     `json:"user_profile_id"`
	Status        string     `json:"status"`
	CreatedAt     time.Time  `json:"created_at"`
	UpdatedAt     time.Time  `json:"updated_at"`
	DeletedAt     *time.Time `json:"deleted_at"`
}

type RecommendationConversation struct {
	ID               string     `json:"id"`
	RecommendationID string     `json:"recommendation_id"`
	Status           string     `json:"status"`
	ContextSnapshot  []byte     `json:"context_snapshot"`
	ExpiresAt        *time.Time `json:"expires_at"`
	CreatedAt        time.Time  `json:"created_at"`
	UpdatedAt        time.Time  `json:"updated_at"`
	DeletedAt        *time.Time `json:"deleted_at"`
}

type RecommendationOption struct {
	ID               string     `json:"id"`
	RecommendationID string     `json:"recommendation_id"`
	RecipeID         *string    `json:"recipe_id"`
	Position         int32      `json:"position"`
	Rationale        string     `json:"rationale"`
	Status           string     `json:"status"`
	CreatedAt        time.Time  `json:"created_at"`
	UpdatedAt        time.Time  `json:"updated_at"`
	DeletedAt        *time.Time `json:"deleted_at"`
}

type ShoppingItem struct {
	ID             string         `json:"id"`
	ShoppingListID string         `json:"shopping_list_id"`
	IngredientName string         `json:"ingredient_name"`
	Quantity       pgtype.Numeric `json:"quantity"`
	Unit           string         `json:"unit"`
	Source         string         `json:"source"`
	PantryItemID   *string        `json:"pantry_item_id"`
	Status         string         `json:"status"`
	CreatedAt      time.Time      `json:"created_at"`
	UpdatedAt      time.Time      `json:"updated_at"`
	DeletedAt      *time.Time     `json:"deleted_at"`
}

type ShoppingList struct {
	ID               string     `json:"id"`
	UserProfileID    string     `json:"user_profile_id"`
	MealPlanID       *string    `json:"meal_plan_id"`
	RecommendationID *string    `json:"recommendation_id"`
	Title            string     `json:"title"`
	Status           string     `json:"status"`
	CreatedAt        time.Time  `json:"created_at"`
	UpdatedAt        time.Time  `json:"updated_at"`
	DeletedAt        *time.Time `json:"deleted_at"`
}

type UserProfile struct {
	ID          string     `json:"id"`
	AccountID   string     `json:"account_id"`
	DisplayName string     `json:"display_name"`
	Status      string     `json:"status"`
	Timezone    *string    `json:"timezone"`
	CreatedAt   time.Time  `json:"created_at"`
	UpdatedAt   time.Time  `json:"updated_at"`
	DeletedAt   *time.Time `json:"deleted_at"`
}
