erDiagram
    %% Aggregate roots are suffixed with ROOT.
    %% Relationships marked "references" preserve ownership across bounded contexts.

    ACCOUNT_ROOT {
        string business_identity
    }

    USER_PROFILE_ROOT {
        string business_identity
    }

    PREFERENCE_SET {
        string business_identity
    }

    PANTRY_ROOT {
        string business_identity
    }

    PANTRY_ITEM {
        string business_identity
    }

    RECIPE_ROOT {
        string business_identity
    }

    RECIPE_FAVORITE {
        string business_identity
    }

    MEAL_PLAN_ROOT {
        string business_identity
    }

    PLANNED_MEAL {
        string business_identity
    }

    SHOPPING_LIST_ROOT {
        string business_identity
    }

    SHOPPING_ITEM {
        string business_identity
    }

    KITCHEN_RECOMMENDATION_ROOT {
        string business_identity
    }

    RECOMMENDATION_OPTION {
        string business_identity
    }

    RECOMMENDATION_CONVERSATION {
        string business_identity
    }

    ACCOUNT_ROOT ||--|| USER_PROFILE_ROOT : "has"
    USER_PROFILE_ROOT ||--o{ PREFERENCE_SET : "owns"

    USER_PROFILE_ROOT ||--|| PANTRY_ROOT : "owns personal pantry"
    PANTRY_ROOT ||--o{ PANTRY_ITEM : "owns"

    RECIPE_ROOT ||--o{ RECIPE_FAVORITE : "owns favorites"
    USER_PROFILE_ROOT ||--o{ RECIPE_FAVORITE : "expresses preference"

    USER_PROFILE_ROOT ||--o{ MEAL_PLAN_ROOT : "owns plans"
    MEAL_PLAN_ROOT ||--o{ PLANNED_MEAL : "owns"
    RECIPE_ROOT ||--o{ PLANNED_MEAL : "references recipe"

    USER_PROFILE_ROOT ||--o{ SHOPPING_LIST_ROOT : "owns lists"
    SHOPPING_LIST_ROOT ||--o{ SHOPPING_ITEM : "owns"
    MEAL_PLAN_ROOT ||--o{ SHOPPING_LIST_ROOT : "may inform"
    PANTRY_ITEM ||--o{ SHOPPING_ITEM : "informs purchase need"

    USER_PROFILE_ROOT ||--o{ KITCHEN_RECOMMENDATION_ROOT : "requests"
    KITCHEN_RECOMMENDATION_ROOT ||--o{ RECOMMENDATION_OPTION : "owns"
    KITCHEN_RECOMMENDATION_ROOT ||--|| RECOMMENDATION_CONVERSATION : "contains context"
    RECIPE_ROOT ||--o{ RECOMMENDATION_OPTION : "is considered by"
    PANTRY_ITEM ||--o{ KITCHEN_RECOMMENDATION_ROOT : "informs"
    KITCHEN_RECOMMENDATION_ROOT ||--o{ PLANNED_MEAL : "may guide"
    KITCHEN_RECOMMENDATION_ROOT ||--o{ SHOPPING_LIST_ROOT : "may inform"
